assets/scss/_markdown.scss
@import "variables";

$block-level:
  h1, h2, h3, h4, h5, h6,
  hr, p, blockquote, table, pre, ul, ol;

// Block level elements:
#{$block-level} {
  margin: 2rem auto;
  max-width: $max-width;
}

#{selector-nest("li >", $block-level)} {
  margin: 1rem 0;
}

// h[1-6]:
h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
  font-family: $emphasize;
}

h1 {
  font-size: 1.7rem;
}

h2 {
  font-size: 1.5rem;
}

h3 {
  font-size: 1.3rem;
}

h4, h5, h6 {
  font-size: 1.1rem;
}

// p:
p {
  line-height: 1.5rem;
}

// a:
a {
  text-decoration: underline;
  color: $black;
  transition: color ease 0.3s 0s;

  &:hover {
    color: $light-blue;
  }
}

// code:
code {
  background-color: $black;
  color: $white;
  font-family: $monospace;
  padding: 0 0.25em;
}

a code {
  transition: color ease 0.3s 0s;
  text-decoration: underline;
}

a:hover code {
  color: $light-blue;
}

// pre:
pre {
  width: 100%;
  max-width: none;
  background-color: $black;
  color: $white;
  font-family: $monospace;

  > code {
    display: block;
    max-width: $max-width;
    overflow-x: auto;
    margin: 0 auto;
    padding: 0.75rem 0;
  }
}

// ul, ol
ul, ol {
  padding-left: 2rem;
}

// table:
table {
  border-collapse: collapse;
  overflow-x: auto;
  display: block;

  tr:hover {
    background-color: $light-gray;
  }

  th {
    font-weight: normal;
    color: $white;
    background-color: $black;
  }

  th, td {
    padding: 0.25rem;
    border: 0.0625rem solid $dark-gray;
  }
}

// hr:
hr {
  padding: 0;
  border: none;
  border-bottom: 0.0625rem solid $light-gray;
}

// blockquote:
blockquote {
  border-left: 0.25rem solid $black;
  padding: 0.5rem 0 0.5rem 1rem;

  > :first-child {
    margin-top: 0;
  }

  > :last-child {
    margin-bottom: 0;
  }
}

